--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.thymeleaf.cache=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=AQUI VA EL MAIL PARA RECOVER PASS
-spring.mail.password=Y LA CLAVE DE APLICACION 2FA 
+spring.mail.username=AQUI VA EL CORREO QUE ENVIA 
+spring.mail.password=Y LA CONTRASEÑA DE APLICACION 2FA
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
