--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/juanca
+spring.datasource.url=jdbc:postgresql://localhost:5432/biblio_rapidos
 spring.datasource.username=postgres
 spring.datasource.password=Ladepostgre0$
 spring.jpa.generate-ddl=true
