metodo lista userDAO a DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Ladepostgre0$
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.thymeleaf.cache=false
 
 spring.mail.host=smtp.gmail.com
